--- a/index.html
+++ b/index.html
@@ -7,13 +7,46 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    0000 0000 0000 0000 Jane Appleseed 00/00 000 Cardholder Name e.g. Jane
-    Appleseed Card Number e.g. 1234 5678 9123 0000 Exp. Date (MM/YY) MM YY CVC
-    e.g. 123 Confirm
-
+    <div class="container">
+      <div class="cards">
+        <img
+          class="card-design front-card"
+          src="images/bg-card-front.png"
+          alt="front card"
+        />
+        <img
+          class="card-design back-card"
+          src="images/bg-card-back.png"
+          alt="back card"
+        />
+      </div>
+      <div class="form">
+        <div class="form-name">
+          <p>CARDHOLDER NAME</p>
+          <input type="text" placeholder="e.g. Jane Appleseed" />
+        </div>
+        <div class="card-number">
+          <p>CARD NUMBER</p>
+          <input type="text" placeholder="e.g. 1234 5678 9123 0000" />
+        </div>
+        <div class="card-details">
+          <div class="exp-date">
+            <p>Exp. Date (MM/YY)</p>
+            <input type="text" placeholder="MM" />
+            <input type="text" placeholder="YY" />
+          </div>
+          <div class="cvc-code">
+            <p>CVC</p>
+            <input type="text" placeholder="e.g. 123" />
+          </div>
+        </div>
+        <button>Confirm</button>
+      </div>
+    </div>
+    <!-- 0000 0000 0000 0000 Jane Appleseed 00/00 000 Cardholder Name Card Number -->
     <!-- Completed state start -->
 
-    Thank you! We've added your card details Continue
+    <!-- Thank you! We've added your card details Continue -->
 
     <script src="index.js"></script>
   </body>
