--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <h2 class="card-display-number">0000 0000 0000 0000</h2>
             <div class="name-date">
               <p class="display-name">JANE APPLESEED</p>
-              <p class="display-date">00/00</p>
+              <p class="display-date">
+                <span class="display-month">00</span>/<span class="display-year"
+                  >00</span
+                >
+              </p>
             </div>
           </div>
           <img
@@ -38,23 +42,31 @@
       <div class="form">
         <div class="form-name">
           <p>CARDHOLDER NAME</p>
-          <input type="text" placeholder="e.g. Jane Appleseed" />
+          <input
+            class="input-name"
+            type="text"
+            placeholder="e.g. Jane Appleseed"
+          />
         </div>
         <div class="card-number">
           <p>CARD NUMBER</p>
-          <input type="text" placeholder="e.g. 1234 5678 9123 0000" />
+          <input
+            class="input-card"
+            type="text"
+            placeholder="e.g. 1234 5678 9123 0000"
+          />
         </div>
         <div class="card-details">
           <div class="card-dates">
             <p>Exp. Date (MM/YY)</p>
             <div class="exp-date">
-              <input type="text" placeholder="MM" />
-              <input type="text" placeholder="YY" />
+              <input class="month-input" type="text" placeholder="MM" />
+              <input class="year-input" type="text" placeholder="YY" />
             </div>
           </div>
           <div class="cvc-code">
             <p>CVC</p>
-            <input type="text" placeholder="e.g. 123" />
+            <input class="cvc-input" type="text" placeholder="e.g. 123" />
           </div>
         </div>
         <button class="confirm-button">Confirm</button>
