--- a/index.html
+++ b/index.html
@@ -47,26 +47,46 @@
             type="text"
             placeholder="e.g. Jane Appleseed"
           />
+          <span class="error-info">Enter valid name</span>
         </div>
         <div class="card-number">
           <p>CARD NUMBER</p>
           <input
             class="input-card"
             type="text"
+            maxlength="16"
             placeholder="e.g. 1234 5678 9123 0000"
           />
+          <span class="error-info">Enter valid card number</span>
         </div>
         <div class="card-details">
           <div class="card-dates">
             <p>Exp. Date (MM/YY)</p>
             <div class="exp-date">
-              <input class="month-input" type="text" placeholder="MM" />
-              <input class="year-input" type="text" placeholder="YY" />
+              <input
+                class="month-input"
+                type="text"
+                placeholder="MM"
+                maxlength="2"
+              />
+              <input
+                class="year-input"
+                type="text"
+                placeholder="YY"
+                maxlength="2"
+              />
             </div>
+            <span class="error-info">Enter valid date</span>
           </div>
           <div class="cvc-code">
             <p>CVC</p>
-            <input class="cvc-input" type="text" placeholder="e.g. 123" />
+            <input
+              class="cvc-input"
+              type="text"
+              placeholder="e.g. 123"
+              maxlength="3"
+            />
+            <span class="error-info">Enter valid CVC</span>
           </div>
         </div>
         <button class="confirm-button">Confirm</button>
