--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             class="input-name"
             type="text"
             placeholder="e.g. Jane Appleseed"
+            required
           />
           <span class="error-info">Enter valid name</span>
         </div>
@@ -56,6 +57,7 @@
             type="text"
             maxlength="16"
             placeholder="e.g. 1234 5678 9123 0000"
+            required
           />
           <span class="error-info">Enter valid card number</span>
         </div>
@@ -68,12 +70,14 @@
                 type="text"
                 placeholder="MM"
                 maxlength="2"
+                required
               />
               <input
                 class="year-input"
                 type="text"
                 placeholder="YY"
                 maxlength="2"
+                required
               />
             </div>
             <span class="error-info">Enter valid date</span>
@@ -85,18 +89,24 @@
               type="text"
               placeholder="e.g. 123"
               maxlength="3"
+              required
             />
             <span class="error-info">Enter valid CVC</span>
           </div>
         </div>
         <button class="confirm-button">Confirm</button>
       </div>
+      <div class="thank-you">
+        <img
+          class="complete-icon"
+          src="images/icon-complete.svg"
+          alt="complete"
+        />
+        <h2 class="thanks-title">THANK YOU!</h2>
+        <p class="thanks-description">We've added your card details</p>
+        <button class="continue-button">Continue</button>
+      </div>
     </div>
-    <!-- 0000 0000 0000 0000 Jane Appleseed 00/00 000 Cardholder Name Card Number -->
-    <!-- Completed state start -->
-
-    <!-- Thank you! We've added your card details Continue -->
-
     <script src="index.js"></script>
   </body>
 </html>
